# clone-and-add-forks

./: README.md  clone_and_add_forks.py  pyproject.toml
tests/: conftest.py  test_clone_and_add_forks.py
