[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clone-and-add-forks"
version = "0.1.0"
authors = [
    { name = "endolith" },
]
description = "Clone a GitHub fork and add all other forks as remotes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
]

[project.urls]
"Homepage" = "https://github.com/endolith/clone-and-add-forks"
"Bug Tracker" = "https://github.com/endolith/clone-and-add-forks/issues"

[project.scripts]
clone-and-add-forks = "clone_and_add_forks:main"

[tool.pytest.ini_options]
timeout = 15
